<resources>
    <string name="app_name">Blind Navigation</string>

    <string name="settings_mode">设置模式</string>
    <string name="speech_speed_label">语速</string>
    <string name="language_label">语言</string>
    <string name="navigation_unit_label">导航单位</string>
    <string name="gesture_instruction">右滑：保存 | 左滑：取消</string>
    <string name="unit_meters">米 (Meters)</string>
    <string name="unit_steps">步 (Steps)</string>

    <string-array name="languages">
        <item>English</item>
        <item>中文 (Mandarin)</item>
        <item>廣東話 (Cantonese)</item>
    </string-array>
</resources>